pretty in purple update

--- a/fish.html
+++ b/fish.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home - Apollo's Corner</title>
+    <title>Fish - Apollo's Corner</title>
     <link type="text/css" rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,11 +16,11 @@
       </nav>
     </header>
     <section>
-      <p>
-        Welcome to worldgen.dev! I'm Apollo, and this site is for me and my projects. You likely know me for my Minecraft projects, such as Tectonic.
-        <br><br>
-        🚧 This site is a work in progress! 🚧 
-      </p>
+      <p>This is Fish, my cat.</p>
+      <img src="images/fish/1.png" width=400px></img>
+      <p>He was rescued from a river, hence his name. He was very tiny when my family got him, not even two pounds!</p>
+      <img src="images/fish/2.png" width=400px></img>
+      <p>He has <a href="https://vetmed.tamu.edu/news/pet-talk/wobbly-cat-syndrome/">wobbly cat syndrome</a>, meaning he struggles to walk and falls over when moving a lot.</p>
     </section>
   </body>
 </html>
