--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home - Apollo's Corner</title>
+    <title>Projects - Apollo's Corner</title>
     <link type="text/css" rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,11 +16,7 @@
       </nav>
     </header>
     <section>
-      <p>
-        Welcome to worldgen.dev! I'm Apollo, and this site is for me and my projects. You likely know me for my Minecraft projects, such as Tectonic.
-        <br><br>
-        🚧 This site is a work in progress! 🚧 
-      </p>
+      <p>🚧 Nothing here... yet! 🚧</p>
     </section>
   </body>
 </html>
