Add posts page, add ios font

--- a/fish.html
+++ b/fish.html
@@ -11,6 +11,7 @@
           <li><a class="title">Apollo's Corner</a></li>
           <li><a class="link" href="index.html">Home</a></li>
           <li><a class="link" href="projects.html">Projects</a></li>
+          <li><a class="link" href="posts.html">Posts</a></li>
           <li><a class="link" href="fish.html">Fish</a></li>
         </ul>
       </nav>
