Change font, add first post

--- a/fish.html
+++ b/fish.html
@@ -2,26 +2,26 @@
 <html>
   <head>
     <title>Fish - Apollo's Corner</title>
-    <link type="text/css" rel="stylesheet" href="style.css" />
+    <link type="text/css" rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header>
       <nav>
         <ul>
           <li><a class="title">Apollo's Corner</a></li>
-          <li><a class="link" href="index.html">Home</a></li>
-          <li><a class="link" href="projects.html">Projects</a></li>
-          <li><a class="link" href="posts.html">Posts</a></li>
-          <li><a class="link" href="fish.html">Fish</a></li>
+          <li><a class="link" href="/index.html">Home</a></li>
+          <li><a class="link" href="/projects.html">Projects</a></li>
+          <li><a class="link" href="/posts.html">Posts</a></li>
+          <li><a class="link" href="/fish.html">Fish</a></li>
         </ul>
       </nav>
     </header>
-    <section>
+    <div class="box">
       <p>This is Fish, my cat.</p>
-      <img src="images/fish/1.png" width=400px></img>
+      <img src="assets/images/fish/1.png" width=400px></img>
       <p>He was rescued from a river, hence his name. He was very tiny when my family got him, not even two pounds!</p>
-      <img src="images/fish/2.png" width=400px></img>
+      <img src="assets/images/fish/2.png" width=400px></img>
       <p>He has <a href="https://vetmed.tamu.edu/news/pet-talk/wobbly-cat-syndrome/">wobbly cat syndrome</a>, meaning he struggles to walk and falls over when moving a lot.</p>
-    </section>
+    </div>
   </body>
 </html>
