--- a/index.html
+++ b/index.html
@@ -2,26 +2,24 @@
 <html>
   <head>
     <title>Home - Apollo's Corner</title>
-    <link type="text/css" rel="stylesheet" href="style.css" />
+    <link type="text/css" rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header>
       <nav>
         <ul>
           <li><a class="title">Apollo's Corner</a></li>
-          <li><a class="link" href="index.html">Home</a></li>
-          <li><a class="link" href="projects.html">Projects</a></li>
-          <li><a class="link" href="posts.html">Posts</a></li>
-          <li><a class="link" href="fish.html">Fish</a></li>
+          <li><a class="link" href="/index.html">Home</a></li>
+          <li><a class="link" href="/projects.html">Projects</a></li>
+          <li><a class="link" href="/posts.html">Posts</a></li>
+          <li><a class="link" href="/fish.html">Fish</a></li>
         </ul>
       </nav>
     </header>
-    <section>
-      <p>
-        Welcome to worldgen.dev! I'm Apollo, and this site is for me and my projects. You likely know me for my Minecraft projects, such as Tectonic.
-        <br><br>
-        🚧 This site is a work in progress! 🚧 
-      </p>
-    </section>
+    <p class="box">
+      Welcome to worldgen.dev! I'm Apollo, and this site is for me and my projects. You likely know me for my Minecraft projects, such as Tectonic.
+      <br><br>
+      🚧 This site is a work in progress! 🚧 
+    </p>
   </body>
 </html>
