--- a/posts.html
+++ b/posts.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Projects - Apollo's Corner</title>
-    <link type="text/css" rel="stylesheet" href="style.css" />
+    <title>Posts - Apollo's Corner</title>
+    <link type="text/css" rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header>
       <nav>
         <ul>
           <li><a class="title">Apollo's Corner</a></li>
-          <li><a class="link" href="index.html">Home</a></li>
-          <li><a class="link" href="projects.html">Projects</a></li>
-          <li><a class="link" href="posts.html">Posts</a></li>
-          <li><a class="link" href="fish.html">Fish</a></li>
+          <li><a class="link" href="/index.html">Home</a></li>
+          <li><a class="link" href="/projects.html">Projects</a></li>
+          <li><a class="link" href="/posts.html">Posts</a></li>
+          <li><a class="link" href="/fish.html">Fish</a></li>
         </ul>
       </nav>
     </header>
-    <section>
-      <p>🚧 Nothing here... yet! 🚧</p>
-    </section>
+    <span style="display: flex; flex-wrap: wrap;">
+      <a class="box" href="posts/25-8-10.html">
+        Welcome to the website!
+        <span class="date"> August 10th, 2025 </span>
+      </a>
+    </span>
   </body>
 </html>
