--- a/projects.html
+++ b/projects.html
@@ -2,22 +2,20 @@
 <html>
   <head>
     <title>Projects - Apollo's Corner</title>
-    <link type="text/css" rel="stylesheet" href="style.css" />
+    <link type="text/css" rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header>
       <nav>
         <ul>
           <li><a class="title">Apollo's Corner</a></li>
-          <li><a class="link" href="index.html">Home</a></li>
-          <li><a class="link" href="projects.html">Projects</a></li>
-          <li><a class="link" href="posts.html">Posts</a></li>
-          <li><a class="link" href="fish.html">Fish</a></li>
+          <li><a class="link" href="/index.html">Home</a></li>
+          <li><a class="link" href="/projects.html">Projects</a></li>
+          <li><a class="link" href="/posts.html">Posts</a></li>
+          <li><a class="link" href="/fish.html">Fish</a></li>
         </ul>
       </nav>
     </header>
-    <section>
-      <p>🚧 Nothing here... yet! 🚧</p>
-    </section>
+    <p class="box">🚧 Nothing here... yet! 🚧</p>
   </body>
 </html>
